--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -14,10 +14,11 @@
   "dependencies": {
     "@fastify/auth": "^5.0.2",
     "@fastify/cookie": "^11.0.2",
+    "@fastify/cors": "^10.0.2",
     "@fastify/session": "^11.1.0",
     "@oslojs/crypto": "^1.0.1",
     "@oslojs/encoding": "^1.1.0",
-    "@prisma/client": "6.2.1",
+    "@prisma/client": "6.3.0",
     "@types/bcrypt": "^5.0.2",
     "bcrypt": "^5.1.1",
     "fastify": "^5.2.1",
@@ -25,7 +26,7 @@
   },
   "devDependencies": {
     "@types/node": "^22.10.10",
-    "prisma": "^6.2.1",
+    "prisma": "^6.3.0",
     "typescript": "5.5.4"
   }
 }
