--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -10,6 +10,8 @@
     "lint": "eslint \"src/**/*.ts\""
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.5",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-navigation-menu": "^1.2.4",
     "@radix-ui/react-slot": "^1.1.1",
