--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -20,6 +20,7 @@
     "@oslojs/encoding": "^1.1.0",
     "@prisma/client": "6.3.0",
     "@types/bcrypt": "^5.0.2",
+    "arctic": "^3.2.2",
     "bcrypt": "^5.1.1",
     "fastify": "^5.2.1",
     "tsx": "^4.19.2"
