feat: add GitHub OAuth2 integration and seed products functionality

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -6,15 +6,18 @@
   "type": "module",
   "scripts": {
     "dev": "tsx watch src/index.ts",
+    "seed": "tsx prisma/seed.ts",
     "studio": "prisma studio"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@faker-js/faker": "^9.5.0",
     "@fastify/auth": "^5.0.2",
     "@fastify/cookie": "^11.0.2",
     "@fastify/cors": "^10.0.2",
+    "@fastify/oauth2": "^8.1.2",
     "@fastify/session": "^11.1.0",
     "@oslojs/crypto": "^1.0.1",
     "@oslojs/encoding": "^1.1.0",
