--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -22,12 +22,15 @@
     "@tanstack/react-query-devtools": "^5.66.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.4.3",
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.5.2",
     "react-router": "^7.1.3",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.66.0",
@@ -38,6 +41,8 @@
     "autoprefixer": "^10.4.20",
     "eslint": "^9.17.0",
     "postcss": "^8.5.1",
+    "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^3.4.17",
     "typescript": "5.5.4",
     "vite": "^6.0.5"
