feat: add ESLint plugins for React hooks and refresh, update TypeScript and ESLint dependencies

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "build": "turbo build",
     "dev": "turbo dev",
     "lint": "turbo lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "studio": "cd apps/backend && pnpm run studio"
   },
   "devDependencies": {
     "eslint": "^8.57.0",
