--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -29,6 +29,7 @@
     "framer-motion": "^12.4.3",
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
+    "react-compiler-runtime": "19.0.0-beta-40c6c23-20250301",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.2",
     "react-router": "^7.1.3",
@@ -43,7 +44,9 @@
     "@types/react-dom": "^19.0.2",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
+    "babel-plugin-react-compiler": "19.0.0-beta-40c6c23-20250301",
     "eslint": "^9.17.0",
+    "eslint-plugin-react-compiler": "19.0.0-beta-40c6c23-20250301",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
