--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -26,6 +26,7 @@
     "arctic": "^3.2.2",
     "bcrypt": "^5.1.1",
     "fastify": "^5.2.1",
+    "stripe": "^17.7.0",
     "tsx": "^4.19.2",
     "zod": "^3.24.2"
   },
