--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -28,6 +28,7 @@
     "fastify": "^5.2.1",
     "stripe": "^17.7.0",
     "tsx": "^4.19.2",
+    "use-debounce": "^10.0.4",
     "zod": "^3.24.2"
   },
   "devDependencies": {
