--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -6,6 +6,8 @@
   "type": "module",
   "scripts": {
     "dev": "tsx watch src/index.ts",
+    "build": "prisma generate && tsc",
+    "start": "node dist/index.js",
     "seed": "tsx prisma/seed.ts",
     "studio": "prisma studio"
   },
@@ -22,9 +24,11 @@
     "@oslojs/crypto": "^1.0.1",
     "@oslojs/encoding": "^1.1.0",
     "@prisma/client": "6.3.0",
+    "@supabase/supabase-js": "^2.49.1",
     "@types/bcrypt": "^5.0.2",
     "arctic": "^3.2.2",
     "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.7",
     "fastify": "^5.2.1",
     "stripe": "^17.7.0",
     "tsx": "^4.19.2",
@@ -33,6 +37,7 @@
   },
   "devDependencies": {
     "@types/node": "^22.10.10",
+    "pino-pretty": "^13.0.0",
     "prisma": "^6.3.0",
     "typescript": "5.5.4"
   }
