--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -12,3 +12,7 @@
   "include": ["src/**/*"],
   "exclude": ["node_modules"]
 }
+
+// "target": "ES2022",
+// "module": "NodeNext",
+// "moduleResolution": "nodenext",
