--- a/package.json
+++ b/package.json
@@ -5,13 +5,24 @@
     "dev": "turbo dev",
     "lint": "turbo lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "studio": "cd apps/backend && pnpm run studio"
+    "studio": "cd apps/backend && pnpm run studio",
+    "vercel-build": "turbo build",
+    "deploy": "vercel",
+    "deploy:prod": "vercel --prod"
+  },
+  "dependencies": {
+    "@oslojs/crypto": "^1.0.1",
+    "@oslojs/encoding": "^1.1.0"
   },
   "devDependencies": {
     "eslint": "^8.57.0",
     "prettier": "^3.2.5",
-    "turbo": "^2.3.3"
+    "turbo": "^2.3.3",
+    "vercel": "^24.0.0"
   },
   "packageManager": "pnpm@8.15.6",
-  "name": "with-vite-react"
+  "name": "cartverse",
+  "engines": {
+    "node": "22.x"
+  }
 }
