--- a/turbo.json
+++ b/turbo.json
@@ -1,10 +1,32 @@
 {
   "$schema": "https://turbo.build/schema.json",
+  "globalDependencies": ["**/.env*"],
+  "globalEnv": [
+    "NODE_ENV",
+    "VITE_STRIPE_PUBLIC_KEY",
+    "DATABASE_URL",
+    "DIRECT_URL",
+    "SUPABASE_SERVICE_KEY",
+    "PORT",
+    "COOKIE_SECRET",
+    "GITHUB_CLIENT_ID",
+    "GITHUB_CLIENT_SECRET",
+    "STRIPE_SECRET_KEY",
+    "STRIPE_WEBHOOK_SECRET",
+    "CLIENT_URL",
+    "USE_MOCK_CHECKOUT"
+  ],
   "tasks": {
     "build": {
       "dependsOn": ["^build"],
       "inputs": ["$TURBO_DEFAULT$", ".env*"],
-      "outputs": ["dist/**"]
+      "outputs": ["dist/**"],
+      "env": [
+        "NODE_ENV",
+        "VITE_STRIPE_PUBLIC_KEY",
+        "DATABASE_URL",
+        "DIRECT_URL"
+      ]
     },
     "lint": {},
     "dev": {
