--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -30,7 +30,6 @@
     "@stripe/stripe-js": "^5.10.0",
     "@tanstack/react-query": "^5.66.0",
     "@tanstack/react-query-devtools": "^5.66.0",
-    "@vitejs/plugin-react": "^4.3.4",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -47,9 +46,7 @@
     "react-router": "^7.1.3",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.5.4",
     "use-debounce": "^10.0.4",
-    "vite": "^6.0.5",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
@@ -57,6 +54,7 @@
     "@types/node": "^22.10.10",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.2",
+    "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
     "babel-plugin-react-compiler": "19.0.0-beta-40c6c23-20250301",
     "eslint": "^9.17.0",
@@ -68,6 +66,8 @@
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^3.4.17",
-    "typescript-eslint": "^8.25.0"
+    "typescript": "5.5.4",
+    "typescript-eslint": "^8.25.0",
+    "vite": "^6.0.5"
   }
 }
