--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,7 @@
   "version": 2,
   "$schema": "https://openapi.vercel.sh/vercel.json",
   "installCommand": "pnpm install",
+  "buildCommand": "NODE_ENV=development pnpm install && pnpm run build",
 
   "rewrites": [
     {
