--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -38,6 +38,7 @@
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.4.3",
     "lucide-react": "^0.474.0",
+    "motion": "^12.7.4",
     "react": "^18.3.1",
     "react-compiler-runtime": "19.0.0-beta-40c6c23-20250301",
     "react-dom": "^18.3.1",
