--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -30,7 +30,9 @@
     "@stripe/stripe-js": "^5.10.0",
     "@tanstack/react-query": "^5.66.0",
     "@tanstack/react-query-devtools": "^5.66.0",
+    "@types/canvas-confetti": "^1.9.0",
     "axios": "^1.7.9",
+    "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
