--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -28,6 +28,8 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.7",
     "fastify": "^5.2.1",
+    "fastify-zod": "^1.4.0",
+    "resend": "^4.3.0",
     "stripe": "^17.7.0",
     "tsx": "^4.19.2",
     "use-debounce": "^10.0.4",
