--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -28,6 +28,7 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@stripe/stripe-js": "^5.10.0",
+    "@supabase/supabase-js": "^2.49.1",
     "@tanstack/react-query": "^5.66.0",
     "@tanstack/react-query-devtools": "^5.66.0",
     "@types/canvas-confetti": "^1.9.0",
