--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -48,7 +48,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.2",
-    "react-router": "^7.1.3",
+    "react-router": "7.5.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "use-debounce": "^10.0.4",
